@@ -1,0 +1,4 @@
+taxonomy,structural
+RC+,1.15107E+02
+RM,5.77385E+02
+W/1,4.10643E+02
